# pico_dm_qd3503728_udd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
host/: README.md
host/linux/: .clangd  Makefile  drm.c  encoder.c  encoder.h  fb.c  input.c  jpeg.c  jpeg.h  output.h  panda.h  udd.c  udd.h  usb.c
include/: debug.h  decoder.h  ft6236.h  panda.h  test_jpg.h  tjpgd_img.h  udd.h
notes/: UDD.xmind  protocal.md
scripts/: img_viewer.py  mp4_player.py  usb_protocal_test.py  usb_speed_test.py
src/: CMakeLists.txt  FreeRTOSConfig.h  decoder.c  ili9488.c  main.c
src/jpegdec/: CMakeLists.txt  JPEGDEC.c  JPEGDEC.h  LICENSE
src/tests/: CMakeLists.txt  jpegdec_perf.c  tjpgd_perf.c
src/tjpgd/: CMakeLists.txt  TJpg_Decoder.h  User_Config.h  tjpgdcnf.h
src/usb/: CMakeLists.txt  init.c  udd_protocal.h  usb.c  usb_config.c  usb_config.h
